--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enqueue-client",
-  "version": "1.0.0",
+  "version": "0.0.11",
   "description": "Node Enqueue Client",
   "main": "index.js",
   "devDependencies": {
@@ -29,5 +29,6 @@
   "bugs": {
     "url": "https://github.com/VinceZK/enqueue-client/issues"
   },
-  "homepage": "https://github.com/VinceZK/enqueue-client#readme"
+  "homepage": "https://github.com/VinceZK/enqueue-client#readme",
+  "dependencies": {}
 }
